fix: login validation and layout bugs

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,11 +1,6 @@
 @import '../../assets/styles/styles.scss';
 
 .app {
-  // margin: 0 30px;
-  // padding: 50px 0;
-  // display: flex;
-  // flex-direction: column;
-  height: 100vh;
   background: #F4F4F4;
 
   // @media (max-width: $b768) {
